--- a/frontend/mapa/index.html
+++ b/frontend/mapa/index.html
@@ -11,6 +11,12 @@
     <div class="map">
         
     </div>
+    <select id="alerta" hidden>
+        <option>Radar</option>
+        <option>Acidente</option>
+        <option>Blitz</option>
+    </select>
+    <button id="Cadastrar" hidden>Cadastrar Alerta</button>
 </body>
 <script src="./script.js" ></script>
 <!-- AIzaSyBSSq9ld6ahsJUuDH8fOwR1ACqCb3SNe70 -->
