--- a/frontend/mapa/index.html
+++ b/frontend/mapa/index.html
@@ -7,19 +7,19 @@
     <link rel="stylesheet" href="./style.css">
     <title>Mapa</title>
 </head>
-<body>
+<body onload="iniciar()">
     <div class="map">
         
     </div>
     <select id="alerta" hidden>
-        <option>Radar</option>
+        <!-- <option>Radar</option>
         <option>Acidente</option>
-        <option>Blitz</option>
+        <option>Blitz</option> -->
     </select>
-    <button id="Cadastrar" hidden>Cadastrar Alerta</button>
+    <button id="cadastrar" onclick="cadastro()" hidden>Cadastrar Alerta</button>
 </body>
 <script src="./script.js" ></script>
 <!-- AIzaSyBSSq9ld6ahsJUuDH8fOwR1ACqCb3SNe70 -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAq669VaU8OvvY2l5GgFXpyuLlNqS9WqJk&callback=initMap&v=weekly" async>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaXxoy5hT3yqTpF85JVG_7xmaC4obZveQ&callback=initMap&v=weekly" async>
 </script>
 </html>
