--- a/frontend/login/index.html
+++ b/frontend/login/index.html
@@ -8,7 +8,7 @@
     
     <title>Login</title>
 </head>
-<body>
+<body onload="verificaLogin()">
     <div class="container">
         <header>
             <img src="../assets/MicrosoftTeams-image.png" alt="logo" class="logo">
