--- a/frontend/mapa/index.html
+++ b/frontend/mapa/index.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <title>Mapa</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body onload="iniciar()">
+<body onload="inicializar()">
     <div class="container">
         <header>
-            <img src="../assets/cardapio.png" alt="Menu" id="Menu">
-            <img src="../assets/MicrosoftTeams-image.png" alt="logo" class="logo">
+            <img src="../assets/cardapio.png" onclick="showMenu()" alt="Menu">
+            <img src="../assets/MicrosoftTeams-image.png" class="logo" alt="Logo">
         </header>
         <div class="map"></div>
     </div>
+
     <div class="menu">
-        <span>
-            <img src="../assets/cancel.png" alt="fechar">
+        <span onclick="closeMenu()">
+            <img src="../assets/cancel.png" alt="Fechar">
         </span>
         <ul>
             <li>Configurações</li>
             <li>Sair</li>
         </ul>
-
     </div>
 
     <div class="modal" hidden>
@@ -31,14 +31,15 @@
             <span onclick="closeModal()" id="closeBot">
                 <img src="../assets/cancel.png" alt="Fechar">
             </span>
-            <select id="alerta" >
+            <select id="alerta">
             </select>
             <button id="cadastrar" onclick="cadastro()">Cadastrar Alerta</button>
         </div>
     </div>
 </body>
-<script src="./script.js" ></script>
-
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB0xWCNQwnEqDZ7I7obm7rQzTD9ZfY8bYE&callback=initMap&v=weekly" async>
-</script>
+<script src="./script.js"></script>
+<script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB0xWCNQwnEqDZ7I7obm7rQzTD9ZfY8bYE&callback=initMap&v=weekly"
+    async
+></script>
 </html>
