--- a/frontend/usuario/index.html
+++ b/frontend/usuario/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="../global/checkLogin.js"></script>
     <link rel="stylesheet" href="./style.css">
     <title>Usuario</title>
 </head>
@@ -19,7 +20,11 @@
             <!-- <input type="checkbox" name="enchente" id="enchente" >
             <label for="enchente"></label> -->
         </div>
-        <div class="meusAlertas">
+        <div class="meusalertas">
+            <div class="title">
+                <h2>Meus Alertas</h2>
+                <img src="../assets/setas-para-cima.png" alt="Seta">
+            </div>
             <table>
                 <thead>
                     <td>
@@ -35,5 +40,4 @@
     
 </body>
 <script src="script.js"></script>
-<script src="../global/checkLogin.js"></script>
 </html>
